Fix word wrapping

--- a/app/less/main.less
+++ b/app/less/main.less
@@ -135,6 +135,11 @@ ul.notes {
             box-sizing: border-box;
             .solarized-light();
         }
+        pre.note-body {
+            margin: 0px;
+            font: inherit;
+            white-space: pre-wrap;
+        }
     }
 }
 
